--- a/Sheaft.Manage/Views/Transfers/Details.cshtml
+++ b/Sheaft.Manage/Views/Transfers/Details.cshtml
@@ -56,8 +56,8 @@
         </div>
         <h4>Purchase Order</h4>
         <div class="form-group">
-            @Html.LabelFor(m => m.PurchaseOrder.Identifier)
-            @Html.TextBoxFor(m => m.PurchaseOrder.Identifier, null, new { @class = "form-control", @disabled = "disabled" })
+            @Html.LabelFor(m => m.PurchaseOrder.Reference)
+            @Html.TextBoxFor(m => m.PurchaseOrder.Reference, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.PurchaseOrder.TotalOnSalePrice)
