--- a/Sheaft.Manage/Views/Agreements/Index.cshtml
+++ b/Sheaft.Manage/Views/Agreements/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Agreements";
     int take = ViewBag.Take;
     int currentPage = ViewBag.Page;
+    string status = ((AgreementStatus?)ViewBag.Status)?.ToString("G");
 }
 
 <div class="container">
@@ -46,6 +47,19 @@
         </div>
         <br />
     }
+
+    <div class="btn-group">
+        <label class="btn btn-secondary @(status == null ? "active": "")">
+            <a asp-controller="Agreements" asp-action="Index" asp-route-kind="" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">All</a>
+        </label>
+        @foreach (var existingStatus in Enum.GetNames(typeof(AgreementStatus)))
+        {
+            <label class="btn btn-secondary @(status == existingStatus ? "active": "")">
+                <a asp-controller="Agreements" asp-action="Index" asp-route-kind="existingStatus" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">@existingStatus</a>
+            </label>
+        }
+    </div>
+    <br />
 
     <table class="table table-hover">
         <thead class="thead-dark">
@@ -100,15 +114,15 @@
                 <td colspan="7">
                     @if (currentPage >= 1)
                     {
-                    <a asp-controller="Agreements" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
-                        <i class="fa fa-caret-left"></i>
-                    </a>
+                        <a asp-controller="Agreements" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
+                            <i class="fa fa-caret-left"></i>
+                        </a>
                     }
                     @if (take == Model.Count())
                     {
-                <a asp-controller="Agreements" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
-                    <i class="fa fa-caret-right"></i>
-                </a>
+                        <a asp-controller="Agreements" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
+                            <i class="fa fa-caret-right"></i>
+                        </a>
                     }
                 </td>
             </tr>
