--- a/Sheaft.Manage/Views/Jobs/Index.cshtml
+++ b/Sheaft.Manage/Views/Jobs/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Jobs";
     int take = ViewBag.Take;
     int currentPage = ViewBag.Page;
+    string status = ((ProcessStatus?)ViewBag.Status)?.ToString("G");
 }
 
     <div class="container">
@@ -47,6 +48,19 @@
             <br />
         }
 
+        <div class="btn-group">
+            <label class="btn btn-secondary @(status == null ? "active": "")">
+                <a asp-controller="Jobs" asp-action="Index" asp-route-kind="" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">All</a>
+            </label>
+            @foreach (var existingStatus in Enum.GetNames(typeof(ProcessStatus)))
+            {
+                <label class="btn btn-secondary @(status == existingStatus ? "active": "")">
+                    <a asp-controller="Jobs" asp-action="Index" asp-route-kind="existingStatus" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">@existingStatus</a>
+                </label>
+            }
+        </div>
+        <br />
+
         <table class="table table-hover">
             <thead class="thead-dark">
                 <tr>
@@ -61,37 +75,37 @@
             <tbody>
                 @foreach (var entity in Model)
                 {
-                <tr>
-                    <th scope="row">@entity.Name</th>
-                    <td>@entity.Status</td>
-                    <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
-                    <td>@entity.Archived</td>
-                    <td>@entity.RemovedOn.HasValue</td>
-                    <td>
-                        <a asp-controller="Jobs" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
-                            <i class="fa fa-pen"></i>
-                        </a>
+                    <tr>
+                        <th scope="row">@entity.Name</th>
+                        <td>@entity.Status</td>
+                        <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
+                        <td>@entity.Archived</td>
+                        <td>@entity.RemovedOn.HasValue</td>
+                        <td>
+                            <a asp-controller="Jobs" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
+                                <i class="fa fa-pen"></i>
+                            </a>
 
-                        @if (entity.RemovedOn.HasValue)
-                        {
-                            @using (Html.BeginForm("Restore", "Jobs", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            @if (entity.RemovedOn.HasValue)
                             {
-                                <button type="submit" class="btn btn-success">
-                                    <i class="fa fa-trash-restore"></i>
-                                </button>
+                                @using (Html.BeginForm("Restore", "Jobs", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                                {
+                                    <button type="submit" class="btn btn-success">
+                                        <i class="fa fa-trash-restore"></i>
+                                    </button>
+                                }
                             }
-                        }
-                        else
-                        {
-                            @using (Html.BeginForm("Delete", "Jobs", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            else
                             {
-                                <button type="submit" class="btn btn-danger">
-                                    <i class="fa fa-trash"></i>
-                                </button>
+                                @using (Html.BeginForm("Delete", "Jobs", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                                {
+                                    <button type="submit" class="btn btn-danger">
+                                        <i class="fa fa-trash"></i>
+                                    </button>
+                                }
                             }
-                        }
-                    </td>
-                </tr>
+                        </td>
+                    </tr>
                 }
             </tbody>
             <tfoot>
