--- a/Sheaft.Manage/Views/Orders/Index.cshtml
+++ b/Sheaft.Manage/Views/Orders/Index.cshtml
@@ -3,43 +3,57 @@
     ViewData["Title"] = "Orders";
     int take = ViewBag.Take;
     int currentPage = ViewBag.Page;
+    string status = ((OrderStatus?)ViewBag.Status)?.ToString("G");
 }
 
-    <div class="container">
-        <h2 class="display-5">Orders</h2>
+<div class="container">
+    <h2 class="display-5">Orders</h2>
+    <br />
+
+    @if (ViewBag.Edited != null)
+    {
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <span>Successfully updated order @ViewBag.Edited.Name</span>
+            <a asp-controller="Orders" asp-action="Details" asp-route-id="@ViewBag.Edited.Id">View details</a>
+
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
         <br />
+    }
 
-        @if (ViewBag.Edited != null)
+    <div class="btn-group">
+        <label class="btn btn-secondary @(status == null ? "active": "")">
+            <a asp-controller="Orders" asp-action="Index" asp-route-kind="" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">All</a>
+        </label>
+        @foreach (var existingStatus in Enum.GetNames(typeof(OrderStatus)))
         {
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <span>Successfully updated order @ViewBag.Edited.Name</span>
-                <a asp-controller="Orders" asp-action="Details" asp-route-id="@ViewBag.Edited.Id">View details</a>
-
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <br />
+            <label class="btn btn-secondary @(status == existingStatus ? "active": "")">
+                <a asp-controller="Orders" asp-action="Index" asp-route-kind="existingStatus" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">@existingStatus</a>
+            </label>
         }
+    </div>
+    <br />
 
-        <table class="table table-hover">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">User</th>
-                    <th scope="col">CreatedOn</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Lines</th>
-                    <th scope="col">Products</th>
-                    <th scope="col">TotalPrice</th>
-                    <th scope="col">Donation</th>
-                    <th scope="col">Fees</th>
-                    <th scope="col">                        
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var entity in Model)
-                {
+    <table class="table table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">User</th>
+                <th scope="col">CreatedOn</th>
+                <th scope="col">Status</th>
+                <th scope="col">Lines</th>
+                <th scope="col">Products</th>
+                <th scope="col">TotalPrice</th>
+                <th scope="col">Donation</th>
+                <th scope="col">Fees</th>
+                <th scope="col">
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var entity in Model)
+            {
                 <tr>
                     <th scope="row">@entity.User.Name</th>
                     <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
@@ -55,25 +69,25 @@
                         </a>
                     </td>
                 </tr>
-                }
-            </tbody>
-            <tfoot>
-                <tr class="text-center">
-                    <td colspan="6">
-                        @if (currentPage >= 1)
-                        {
-                            <a asp-controller="Orders" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
-                                <i class="fa fa-caret-left"></i>
-                            </a>
-                        }
-                        @if (take == Model.Count())
-                        {
-                            <a asp-controller="Orders" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
-                                <i class="fa fa-caret-right"></i>
-                            </a>
-                        }
-                    </td>
-                </tr>
-            </tfoot>
-        </table>
-    </div>
+            }
+        </tbody>
+        <tfoot>
+            <tr class="text-center">
+                <td colspan="6">
+                    @if (currentPage >= 1)
+                    {
+                        <a asp-controller="Orders" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
+                            <i class="fa fa-caret-left"></i>
+                        </a>
+                    }
+                    @if (take == Model.Count())
+                    {
+                        <a asp-controller="Orders" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
+                            <i class="fa fa-caret-right"></i>
+                        </a>
+                    }
+                </td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
