--- a/Sheaft.Manage/Views/Payins/Index.cshtml
+++ b/Sheaft.Manage/Views/Payins/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Payins";
     int take = ViewBag.Take;
     int currentPage = ViewBag.Page;
+    string status = ((TransactionStatus?)ViewBag.Status)?.ToString("G");
 }
 
     <div class="container">
@@ -22,6 +23,19 @@
             <br />
         }
 
+        <div class="btn-group">
+            <label class="btn btn-secondary @(status == null ? "active": "")">
+                <a asp-controller="Payins" asp-action="Index" asp-route-kind="" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">All</a>
+            </label>
+            @foreach (var existingStatus in Enum.GetNames(typeof(TransactionStatus)))
+            {
+                <label class="btn btn-secondary @(status == existingStatus ? "active": "")">
+                    <a asp-controller="Payins" asp-action="Index" asp-route-kind="existingStatus" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">@existingStatus</a>
+                </label>
+            }
+        </div>
+        <br />
+
         <table class="table table-hover">
             <thead class="thead-dark">
                 <tr>
@@ -32,27 +46,27 @@
                     <th scope="col">Status</th>
                     <th scope="col">ExecutedOn</th>
                     <th scope="col">Code</th>
-                    <th scope="col">                        
+                    <th scope="col">
                     </th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var entity in Model)
                 {
-                <tr>
-                    <th scope="row">@entity.Identifier</th>
-                    <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
-                    <td>@entity.Credited€</td>
-                    <td>@entity.CreditedUser.Name</td>
-                    <td>@entity.Status.ToString("G")</td>
-                    <td>@entity.ExecutedOn?.ToString("dd/MM/yy hh:mm")</td>
-                    <td>@entity.ResultCode</td>
-                    <td>
-                        <a asp-controller="Payins" asp-action="Details" asp-route-id="@entity.Id" class="btn btn-info">
-                            <i class="fa fa-eye"></i>
-                        </a>
-                    </td>
-                </tr>
+                    <tr>
+                        <th scope="row">@entity.Identifier</th>
+                        <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
+                        <td>@entity.Credited€</td>
+                        <td>@entity.CreditedUser.Name</td>
+                        <td>@entity.Status.ToString("G")</td>
+                        <td>@entity.ExecutedOn?.ToString("dd/MM/yy hh:mm")</td>
+                        <td>@entity.ResultCode</td>
+                        <td>
+                            <a asp-controller="Payins" asp-action="Details" asp-route-id="@entity.Id" class="btn btn-info">
+                                <i class="fa fa-eye"></i>
+                            </a>
+                        </td>
+                    </tr>
                 }
             </tbody>
             <tfoot>
