--- a/Sheaft.Manage/Views/PurchaseOrders/Index.cshtml
+++ b/Sheaft.Manage/Views/PurchaseOrders/Index.cshtml
@@ -26,7 +26,7 @@
         {
             <div class="alert alert-success alert-dismissible fade show" role="alert">
                 <span>Successfully restored purchase order @ViewBag.Restored.Name</span>
-                <a asp-controller="PurchaseOrders" asp-action="Edit" asp-route-id="@ViewBag.Restored.Id">View details</a>
+                <a asp-controller="PurchaseOrders" asp-action="Details" asp-route-id="@ViewBag.Restored.Id">View details</a>
 
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -39,7 +39,7 @@
         {
             <div class="alert alert-success alert-dismissible fade show" role="alert">
                 <span>Successfully updated purchase order @ViewBag.Edited.Name</span>
-                <a asp-controller="PurchaseOrders" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
+                <a asp-controller="PurchaseOrders" asp-action="Details" asp-route-id="@ViewBag.Edited.Id">View details</a>
 
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -86,7 +86,7 @@
                         <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
                         <td>@entity.RemovedOn.HasValue</td>
                         <td>
-                            <a asp-controller="PurchaseOrders" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
+                            <a asp-controller="PurchaseOrders" asp-action="Details" asp-route-id="@entity.Id" class="btn btn-info">
                                 <i class="fa fa-pen"></i>
                             </a>
 
